--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -736,6 +736,9 @@
 				border-radius: 100%;
 				box-shadow: 0 0 0 1.5em #ffffff;
 				width: 175px;
+				height: 175px;
+				overflow: hidden;
+
 			}
 
 			#main .avatar:before {
