--- a/new_site/css/main.css
+++ b/new_site/css/main.css
@@ -11,7 +11,7 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 0;
   padding: 0;
   border: 0;
@@ -42,27 +42,42 @@ table {
   border-spacing: 0; }
 
 .navbar {
-  position: static;
   background-color: #738BD1;
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  height: 300px;
-  text-align: center; }
-  .navbar .myself h4 {
-    font-size: 48px; }
-  .navbar .myself div {
-    font-size: 36px; }
-  .navbar .nav-options {
-    display: flex;
-    justify-content: center;
-    font-size: 15px; }
-    .navbar .nav-options div {
-      width: 60%;
+  justify-content: center;
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px; }
+  .navbar * {
+    padding: 10px 0 0 0; }
+  .navbar h4 {
+    font-weight: 300;
+    font-size: 56px; }
+  .navbar div {
+    font-weight: 100;
+    font-size: 24px; }
+
+.nav-options {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  font-size: 15px;
+  background-color: gray;
+  height: 50px;
+  width: 100%; }
+  .nav-options.docked {
+    position: fixed;
+    top: 0; }
+  .nav-options div {
+    display: block;
+    width: 80%;
+    padding: 0; }
+    .nav-options div ul {
       display: flex;
       justify-content: center; }
-      .navbar .nav-options div span {
-        margin: 15px; }
+    .nav-options div li {
+      margin: 15px; }
 
 /*# sourceMappingURL=main.css.map */
