--- a/new_site/css/main.scss
+++ b/new_site/css/main.scss
@@ -11,7 +11,7 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 0;
   padding: 0;
   border: 0;
@@ -46,36 +46,51 @@ table {
 
 
 .navbar {
-  position: static;
   background-color: #738BD1;
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  height: 300px;
+  justify-content: center;
   text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  * {
+    padding: 10px 0 0 0;
+  }
+  h4 {
+    font-weight: 300;
+    font-size: 56px;
+  }
+  div {
+    font-weight: 100;
+    font-size: 24px;
+  }
+}
 
-  .myself {
-    h4 {
-      font-size: 48px;
-    }
-
-    div {
-      font-size: 36px;
-    }
+.nav-options {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  font-size: 15px;
+  background-color: gray;
+  height: 50px;
+  width: 100%;
+  &.docked {
+    position: fixed;
+    top: 0;
   }
 
-  .nav-options {
-    display: flex;
-    justify-content: center;
-    font-size: 15px;
-    div {
-      width: 60%;
+  div {
+    display: block;
+    width: 80%;
+    padding: 0;
+
+    ul {
       display: flex;
       justify-content: center;
-      span {
-        margin: 15px;
-      }
+    }
+    li {
+      margin: 15px;
     }
   }
 }
