--- a/new_site/css/main.scss
+++ b/new_site/css/main.scss
@@ -57,7 +57,8 @@ table {
   * {
     padding: 10px 0 0 0;
   }
-  h4 {
+
+  h2 {
     font-weight: 300;
     font-size: 56px;
   }
@@ -73,24 +74,53 @@ table {
   justify-content: center;
   font-size: 15px;
   background-color: gray;
-  height: 50px;
+  height: 100%;
   width: 100%;
   &.docked {
     position: fixed;
     top: 0;
   }
 
-  div {
+  .container {
     display: block;
     width: 80%;
     padding: 0;
 
-    ul {
+    &>ul {
       display: flex;
       justify-content: center;
+
+      .options {
+        padding: 15px;
+        background-color: gray;
+        &:hover {
+          cursor: pointer;
+
+          background-color: lightgray;
+        }
+      }
     }
-    li {
-      margin: 15px;
+  }
+
+  .dropdown-content {
+    display: none;
+  }
+  .dropdown-wrapper {
+    position: relative;
+    &:hover {
+      .dropdown-content {
+        background-color: gray;
+        display: inline;
+        position: absolute;
+        li {
+          padding: 15px;
+          margin: 0px;
+          &:hover {
+            cursor: pointer;
+            background-color: lightgray;
+          }
+        }
+      }
     }
   }
 }
