--- a/new_site/css/main.css
+++ b/new_site/css/main.css
@@ -41,6 +41,20 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+h2 {
+  font-weight: 300;
+  font-size: 56px; }
+
+h4 {
+  font-size: 48px;
+  text-align: center;
+  width: 100%;
+  border-bottom: 2px solid blue;
+  margin-bottom: 20px; }
+
+h6 {
+  font-size: 24px; }
+
 .navbar {
   background-color: #738BD1;
   color: white;
@@ -52,9 +66,6 @@ table {
   padding-bottom: 50px; }
   .navbar * {
     padding: 10px 0 0 0; }
-  .navbar h2 {
-    font-weight: 300;
-    font-size: 56px; }
   .navbar div {
     font-weight: 100;
     font-size: 24px; }
@@ -65,7 +76,6 @@ table {
   justify-content: center;
   font-size: 15px;
   background-color: gray;
-  height: 100%;
   width: 100%; }
   .nav-options.docked {
     position: fixed;
@@ -97,5 +107,10 @@ table {
         .nav-options .dropdown-wrapper:hover .dropdown-content li:hover {
           cursor: pointer;
           background-color: lightgray; }
+
+main section {
+  margin: 50px;
+  display: flex;
+  flex-direction: column; }
 
 /*# sourceMappingURL=main.css.map */
