--- a/new_site/css/main.scss
+++ b/new_site/css/main.scss
@@ -44,6 +44,23 @@ table {
 
 // ***************************
 
+h2 {
+  font-weight: 300;
+  font-size: 56px;
+}
+
+h4 {
+  font-size: 48px;
+  text-align: center;
+  width: 100%;
+  border-bottom: 2px solid blue;
+  margin-bottom: 20px;
+}
+
+h6 {
+  font-size: 24px;
+}
+
 
 .navbar {
   background-color: #738BD1;
@@ -58,10 +75,6 @@ table {
     padding: 10px 0 0 0;
   }
 
-  h2 {
-    font-weight: 300;
-    font-size: 56px;
-  }
   div {
     font-weight: 100;
     font-size: 24px;
@@ -74,8 +87,8 @@ table {
   justify-content: center;
   font-size: 15px;
   background-color: gray;
-  height: 100%;
   width: 100%;
+
   &.docked {
     position: fixed;
     top: 0;
@@ -122,5 +135,14 @@ table {
         }
       }
     }
+  }
+}
+
+
+main {
+  section {
+    margin: 50px;
+    display: flex;
+    flex-direction: column;
   }
 }
