--- a/new_site/css/main.css
+++ b/new_site/css/main.css
@@ -42,18 +42,18 @@ table {
   border-spacing: 0; }
 
 h2 {
-  font-weight: 300;
+  font-weight: 100;
   font-size: 56px; }
 
 h4 {
   font-size: 48px;
   text-align: center;
   width: 100%;
-  border-bottom: 2px solid blue;
+  border-bottom: 2px solid #738BD1;
   margin-bottom: 20px; }
 
 h6 {
-  font-size: 24px; }
+  font-size: 30px; }
 
 .navbar {
   background-color: #738BD1;
@@ -75,8 +75,9 @@ h6 {
   display: flex;
   justify-content: center;
   font-size: 15px;
-  background-color: gray;
-  width: 100%; }
+  background-color: #738BD1;
+  width: 100%;
+  color: white; }
   .nav-options.docked {
     position: fixed;
     top: 0; }
@@ -89,16 +90,16 @@ h6 {
       justify-content: center; }
       .nav-options .container > ul .options {
         padding: 15px;
-        background-color: gray; }
+        background-color: #738BD1; }
         .nav-options .container > ul .options:hover {
           cursor: pointer;
-          background-color: lightgray; }
+          color: #3550A1; }
   .nav-options .dropdown-content {
     display: none; }
   .nav-options .dropdown-wrapper {
     position: relative; }
     .nav-options .dropdown-wrapper:hover .dropdown-content {
-      background-color: gray;
+      background-color: #738BD1;
       display: inline;
       position: absolute; }
       .nav-options .dropdown-wrapper:hover .dropdown-content li {
@@ -106,11 +107,50 @@ h6 {
         margin: 0px; }
         .nav-options .dropdown-wrapper:hover .dropdown-content li:hover {
           cursor: pointer;
-          background-color: lightgray; }
+          background-color: #738BD1;
+          color: #3550A1; }
 
 main section {
   margin: 50px;
   display: flex;
   flex-direction: column; }
+  main section h4 {
+    color: #3550A1; }
+  main section h6 {
+    text-align: center;
+    color: #738BD1;
+    margin-bottom: 20px; }
+  main section li {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px; }
+    main section li .description {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between; }
+      main section li .description img {
+        height: 200px;
+        width: 30%; }
+      main section li .description > div {
+        width: 68%;
+        text-align: center; }
+        main section li .description > div p {
+          text-align: left; }
+        main section li .description > div button {
+          margin: 10px; }
+
+button {
+  border-style: solid;
+  border-radius: 5px;
+  border-color: #738BD1;
+  background-color: transparent;
+  width: 100px;
+  height: 40px;
+  color: #738BD1;
+  font-size: 18px; }
+  button:hover {
+    border-color: #3550A1;
+    color: #3550A1;
+    cursor: pointer; }
 
 /*# sourceMappingURL=main.css.map */
