--- a/new_site/css/main.scss
+++ b/new_site/css/main.scss
@@ -45,7 +45,7 @@ table {
 // ***************************
 
 h2 {
-  font-weight: 300;
+  font-weight: 100;
   font-size: 56px;
 }
 
@@ -53,12 +53,12 @@ h4 {
   font-size: 48px;
   text-align: center;
   width: 100%;
-  border-bottom: 2px solid blue;
+  border-bottom: 2px solid #738BD1;
   margin-bottom: 20px;
 }
 
 h6 {
-  font-size: 24px;
+  font-size: 30px;
 }
 
 
@@ -86,8 +86,9 @@ h6 {
   display: flex;
   justify-content: center;
   font-size: 15px;
-  background-color: gray;
+  background-color: #738BD1;
   width: 100%;
+  color: white;
 
   &.docked {
     position: fixed;
@@ -105,11 +106,11 @@ h6 {
 
       .options {
         padding: 15px;
-        background-color: gray;
+        background-color: #738BD1;
         &:hover {
           cursor: pointer;
+          color: #3550A1;
 
-          background-color: lightgray;
         }
       }
     }
@@ -122,7 +123,7 @@ h6 {
     position: relative;
     &:hover {
       .dropdown-content {
-        background-color: gray;
+        background-color: #738BD1;
         display: inline;
         position: absolute;
         li {
@@ -130,7 +131,8 @@ h6 {
           margin: 0px;
           &:hover {
             cursor: pointer;
-            background-color: lightgray;
+            background-color: #738BD1;
+            color: #3550A1;
           }
         }
       }
@@ -144,5 +146,58 @@ main {
     margin: 50px;
     display: flex;
     flex-direction: column;
+
+    h4 {
+      color: #3550A1;
+    }
+
+    h6 {
+      text-align: center;
+      color: #738BD1;
+      margin-bottom: 20px;
+    }
+
+    li {
+      display:flex;
+      flex-direction: column;
+      margin-bottom: 50px;
+      .description {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        img {
+          height: 200px;
+          width: 30%;
+        }
+
+        >div {
+          width: 68%;
+          text-align: center;
+          p {
+            text-align: left;
+          }
+          button {
+            margin: 10px;
+          }
+        }
+      }
+    }
+  }
+}
+
+button {
+  border-style: solid;
+  border-radius: 5px;
+  border-color: #738BD1;
+  background-color: transparent;
+  width: 100px;
+  height: 40px;
+  color: #738BD1;
+  font-size: 18px;
+
+  &:hover {
+    border-color: #3550A1;
+    color: #3550A1;
+    cursor: pointer;
   }
 }
