--- a/css/main.scss
+++ b/css/main.scss
@@ -82,7 +82,7 @@ h6 {
 }
 
 .nav-options {
-  position: relative;
+  position: absolute;
   display: flex;
   justify-content: center;
   font-size: 15px;
@@ -103,7 +103,6 @@ h6 {
     &>ul {
       display: flex;
       justify-content: center;
-
       .options {
         padding: 15px;
         background-color: #738BD1;
@@ -129,10 +128,16 @@ h6 {
         li {
           padding: 15px;
           margin: 0px;
+          a {
+            text-decoration: none;
+            color: white;
+          }
           &:hover {
             cursor: pointer;
             background-color: #738BD1;
-            color: #3550A1;
+            a {
+              color: #3550A1;
+            }
           }
         }
       }
@@ -221,7 +226,7 @@ footer {
     flex-direction: row;
     li {
       padding: 0 10px 0 10px;
-      border-right: 1px solid #3550A1;
+      border-right: 1px solid white;
       margin: 0;
       width: auto;
       text-align: center;
@@ -253,4 +258,13 @@ button {
     color: #3550A1;
     cursor: pointer;
   }
+}
+
+#resume {
+  display:none;
+//   &.show {
+//     position: fixed;
+//     z-index: 1;
+//     display: block;
+//   }
 }
