--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,9 @@ ol, ul {
 blockquote, q {
   quotes: none;
 }
+a {
+  text-decoration: none;
+}
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
@@ -109,7 +112,6 @@ h6 {
         &:hover {
           cursor: pointer;
           color: #3550A1;
-
         }
       }
     }
@@ -126,9 +128,11 @@ h6 {
         display: inline;
         position: absolute;
         li {
-          padding: 15px;
+          padding: 0px;
           margin: 0px;
           a {
+            padding: 15px;
+            display: block;
             text-decoration: none;
             color: white;
           }
@@ -136,6 +140,7 @@ h6 {
             cursor: pointer;
             background-color: #738BD1;
             a {
+              display: block;
               color: #3550A1;
             }
           }
