--- a/css/main.scss
+++ b/css/main.scss
@@ -180,15 +180,18 @@ main {
       flex-direction: column;
       margin-bottom: 25px;
       padding-bottom: 25px;
-
+      height: 300px;
 
       .description {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         img {
-          height: 200px;
-          width: 30%;
+          height: auto;
+          width: auto;
+          min-width: 30%;
+          max-height: 200px;
+          max-width: 40%;
         }
 
         >div {
@@ -247,11 +250,6 @@ footer {
       }
     }
   }
-}
-
-#logo {
-  width: 300px;
-  height: 200px;
 }
 
 button {
