--- a/css/main.scss
+++ b/css/main.scss
@@ -186,12 +186,12 @@ main {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+
         img {
           height: auto;
-          width: auto;
-          min-width: 30%;
+          width: 30%;
           max-height: 200px;
-          max-width: 40%;
+          padding: 0 10px;
         }
 
         >div {
