--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,11 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+main {
+  max-width: 1080px;
+  margin-left: auto;
+  margin-right: auto; }
+
 h2 {
   font-weight: 100;
   font-size: 56px; }
@@ -140,15 +145,17 @@ main section {
     flex-direction: column;
     margin-bottom: 25px;
     padding-bottom: 25px;
-    height: 300px; }
+    min-height: 300px;
+    height: fit-content; }
     main section li .description {
       display: flex;
       flex-direction: row;
       justify-content: space-between; }
       main section li .description img {
-        height: auto;
-        width: 30%;
-        max-height: 200px;
+        height: 200px;
+        width: 300px;
+        max-width: 30%;
+        min-width: 200px;
         padding: 0 10px; }
       main section li .description > div {
         width: 68%;
