--- a/css/main.scss
+++ b/css/main.scss
@@ -46,6 +46,11 @@ table {
 }
 
 // ***************************
+main {
+  max-width: 1080px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 h2 {
   font-weight: 100;
@@ -180,7 +185,8 @@ main {
       flex-direction: column;
       margin-bottom: 25px;
       padding-bottom: 25px;
-      height: 300px;
+      min-height: 300px;
+      height: fit-content;
 
       .description {
         display: flex;
@@ -188,9 +194,10 @@ main {
         justify-content: space-between;
 
         img {
-          height: auto;
-          width: 30%;
-          max-height: 200px;
+          height: 200px;
+          width: 300px;
+          max-width: 30%;
+          min-width: 200px;
           padding: 0 10px;
         }
 
